3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/object.c: fix bug #1526364 (stacking Royal Guards). Use find_free_spot
 to place dropped items if living. Also fix indent of function free_object2.
server/c_object.c: fix bug #1529969 (shop floor not working in random maps).
Ryo 2006-07-29

server/c_wiz.c: fix addexp not working on skills.
server/time.c: don't crash if duplicator doesn't have other_arch set.
Ryo 2006-07-28

plugins/common/hashtable.c, plugins/common/include/hashtable.h, 
    plugins/common/Makefile.am, plugins/common/include/Makefile.am,
    plugins/cfpython/Makefile.am: Add hashtable.c, to add ptr-to-ptr hash tables
    for plugins to use. (Useful to use a cf object as a key for the table)
plugins/cfpython/include/cfpython.h: Include compile.h which Python.h doesn't
    include on it's own in versions of python older than 2.4.
include/plugin.h, common/object.c: Add EVENT_DESTROY, a local event triggered when
    an object is freed.
include/funcpoint.h, crossedit/stubs.c, random_maps/standalone.c,
    test/unit/common/stubs_common.c: Allow execute_event to be called from common
    and add appropriate stubs.
Alex Schultz 2006-07-28

common/item.c: In describe_item() correct capacity description of large
   (>1000 maxsp) Glowing Crystals.
Andreas Kirschbaum 2006-07-28

plugins/cfpython/cfpython.c: Added compilePython() function to split the compiling
    of python bytecode from the execution of it. Add support for caching the
    bytecode for a fixed number of scripts (default of 16) to increase speed.
Alex Schultz 2006-07-27

server/c_wiz.c: prevent a DM to reset a random map if (s)he is on that map.
    Workaround for bug #1528173.